mi-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-app
spec:
  selector:
    app: mi-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
